  syntax, the -l/--load-average option will use the contents of that file to
  determine how many jobs are running at any given instant, and compare that
  value to the load value requested.  This allows usage such as "-j -lN" for
  N-processor systems without fear of overload.
  Patch provided by Sven C. Dack <sven.c.dack@sky.com>

* Makefiles can now specify the '-j' option in their MAKEFLAGS variable and
  this will cause make to enable that parallelism mode.

* GNU make will now use pthread_spawn() on systems where it is available.
  It will select POSIX_SPAWN_USEVFORK where that is available.  If you prefer
  to use fork/exec even on systems where pthread_spawn() is present, you can
  use the --disable-pthread-spawn option to configure.
  Aron Barath <baratharon@caesar.elte.hu> provided the basic implementation.

* Error messages printed when invoking non-existent commands have been cleaned
  up and made consistent.

* The previous limit of 63 jobs under -jN on MS-Windows is now
  increased to 4095.  That limit includes the subprocess started by
  the $(shell) function.

* A new option --no-silent has been added, that cancels the effect of the
  -s/--silent/--quiet flag.

* A new option -E has been added as a short alias for --eval.

* All wildcard expansion within GNU make, including $(wildcard ...), will sort
  the results.  See https://savannah.gnu.org/bugs/index.php?52076

* Interoperate with newer GNU libc and musl C runtime libraries.

* Performance improvements provided by Paolo Bonzini <pbonzini@redhat.com>

GNU make Developer News

* Import the GNU standard bootstrap script to replace the hand-rolled
  "make update" method for building code from a GNU make Git repository.

* Rework the source distribution to move source files into the src/*
  subdirectory.  This aligns with modern best practices in GNU.

* Replace local portability code with Gnulib content.  Unfortunately due to a