@@ -43,6 +43,11 @@ http://sv.gnu.org/bugs/index.php?group=make&report_id=111&fix_release_id=108&set
   N-processor systems without fear of overload.
   Patch provided by Sven C. Dack <sven.c.dack@sky.com>
 
+* WARNING: Backward-incompatibility!
+  Contrary to the documentation, suffix rules with prerequisites were being
+  treated BOTH as simple targets AND as pattern rules.  Behavior now matches
+  the documentation, and pattern rules are no longer created in this case.
+
 * Makefiles can now specify the '-j' option in their MAKEFLAGS variable and
   this will cause make to enable that parallelism mode.
 
